style: 🎨 Improve structure & remove hero image

--- a/src/_includes/layouts/story-layout.njk
+++ b/src/_includes/layouts/story-layout.njk
@@ -1,6 +1,6 @@
 {% block content %}
     {% include "partials/site-breadcrumbs.njk" %}
-    <div class="story-with-sidebar" data-layout="with-sidebar" data-props="side:right space:l">
+    <div class="story-page-sidebar" data-layout="with-sidebar" data-props="side:right space:l">
         <article itemscope itemtype="http://schema.org/Article" itemref="story-details" data-layout="stack" style="--space: calc(var(--space-xl) * 2);">
             {% block main %}{% endblock %}
         </article>
