--- a/src/_includes/partials/site-breadcrumbs.njk
+++ b/src/_includes/partials/site-breadcrumbs.njk
@@ -1,6 +1,7 @@
 {% set navPages = collections.all | eleventyNavigationBreadcrumb(eleventyNavigation.key , {allowMissing: true, includeSelf: true}) %}
 {% if navPages.length > 0 %}
     <nav aria-label="Breadcrumbs" class="breadcrumbs-navigation">
+        <span class="visually-hidden">You are here</span>
         {{ navPages | eleventyNavigationToHtml | safe }}
     </nav>
 {% endif %}
