--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -2,11 +2,11 @@
     <div class="padded-container header" data-layout="cluster" data-props="y:center x:between">
         <a data-heading="5" data-link="noHover" href="/">
             <span aria-hidden="true" data-heading="4" data-font="emoji">🎓</span>
-            <span class="visually-hidden">{{meta.site_name}}</span>
+            <span class="visually-hidden">Home</span>
         </a>
         <div data-layout="cluster" data-props="space:s">
             <a data-font="sans-serif" data-link="data-link" href="/stories">
-                All stories
+                Findings
             </a>
             {# <a data-font="sans-serif" data-link="data-link" href="/about">
                 About
