--- a/src/_includes/partials/story-card-entry.njk
+++ b/src/_includes/partials/story-card-entry.njk
@@ -2,12 +2,12 @@
     {% set color = entry.category.color %}
     {% set type = entry.type.name %}
     {# <span>{{ entry.category.name }}</span> #}
-    {% if type == "Insight" %}
-        <span data-layout="center" data-heading="6" data-props="intrinsic" class="story-card__ribbon">Insight</span>
-    {% endif %}
-    <div class="story-card__cover" data-font="emoji" data-color="{{ color }}" aria-hidden="true">
-        <span data-heading="4">{{ entry.icon if entry.icon else '📄' }}</span>
-    </div>
+    <span class="story-card__cover"  data-color="{{ color }}" aria-hidden="true">
+        <span data-font="emoji" aria-hidden="true">{{ entry.icon if entry.icon else '📄' }}</span>
+    </span>
     <a itemprop="url" data-link="noHover" class="story-card__title" href="/{{ entry.slug }}">{{ entry.name }}</a>
+    {# {% if type == "Insight" %}
+        <span data-layout="center" data-heading="6" data-props="intrinsic" class="story-card__ribbon">Insight</span>
+    {% endif %} #}
     <meta itemprop="headline" content="{{entry.name}}"/>
 </li>
