--- a/src/pages/stories/stories-page.njk
+++ b/src/pages/stories/stories-page.njk
@@ -1,9 +1,7 @@
 ---
 layout: layouts/nested-page-layout.njk
-title: All Stories
-description: Find all stories grouped by category.
-tags: 
-    - webpage
+title: All Findings
+description: Findings grouped by category.
 permalink: /stories/index.html
 eleventyNavigation:
   key: Stories
