--- a/src/css/_main.css
+++ b/src/css/_main.css
@@ -39,16 +39,20 @@ section[aria-labelledby="summary"]{
 /*=============================================
 =            Story   styles TODO: extract         =
 =============================================*/
-.story-with-sidebar {
-  --side-width: calc(var(--space-l-xl, 2rem) * 5);
-  --content-min: 75%;
+.story-page-sidebar {
+  --side-width: calc(var(--space-l-xl, 2rem) * 6);
+  --content-min: 70%;
 }
-.story-with-sidebar aside {
+.story-page-sidebar h1,
+.story-page-sidebar h2{
+  font-weight: 500;
+}
+.story-page-sidebar aside {
   margin-bottom: var(--space);
   margin-top: var(--space-3xl);
 }
 
-.story-with-sidebar figure svg {
+.story-page-sidebar figure svg {
   width: calc(var(--space-2xl) * 3);
   height: calc(var(--space-2xl) * 3);
   padding: var(--space-s);
@@ -85,7 +89,7 @@ inspiration: https://codepen.io/thierry/pen/qBqYmgw
 
 [data-markdown] {
   /* Remove width constraints from generated markdown */
-  --measure: 80ch;
+  --measure: 90ch;
   --space: 1em;
 }
 [data-markdown] h3{
@@ -209,20 +213,18 @@ inspiration: https://codepen.io/thierry/pen/qBqYmgw
 
 .story-card {
   overflow: hidden;
-  padding: var(--space-l) var(--space-s);
-  /* border-radius: var(--border-radius); */
+  padding: var(--space-m) var(--space-s);
   position: relative;
   background-color: var(--gray-50);
   border: var(--border-thin) solid var(--gray-300);
-  /* box-shadow: var(--shadow-elevation-low); */
+  box-shadow: var(--shadow-elevation-low);
   transition-property: box-shadow, transform;
   transition-duration: 0.3s;
   transition-timing-function: var(--bezier-snappy);
 }
 .story-card:hover,
 .story-card:focus-within {
-  box-shadow: var(--shadow-elevation-low);
-  /* transform: translateY(calc(-1 * var(--space-2xs))); */
+  box-shadow: var(--shadow-elevation-medium);
 }
 /* .story-card__cover { */
   /* height: 150px; */
@@ -357,9 +359,9 @@ textarea {
 
 .reference-item{
   --measure: 120ch;
-  list-style-type: none;
+  /* list-style-type: none; */
 }
-.reference-item a::before{
+/* .reference-item a::before{
   content: "🔹";
   font-family: var(--font-emoji);
-}
+} */
