--- a/src/pages/categories/category-pagination.njk
+++ b/src/pages/categories/category-pagination.njk
@@ -19,7 +19,7 @@ eleventyComputed:
   {{ category }}
 </h1>
 <p>
-  Here are some stories relating to the subject of {{ category }}.
+  Here are some findings related to the subject of {{ category }}.
   <ul class="story-cards" data-layout="grid" data-props="noPad" role="list">
     {% set entries = collections.stories | filterByCategory(category) %}
     {%- for entry in entries %}
