--- a/src/pages/home-page.njk
+++ b/src/pages/home-page.njk
@@ -1,9 +1,7 @@
 ---
 layout: layouts/home-layout.njk
 title: "Home"
-description: A collection of research findings, insights and quotes on frontend development.
-tags: 
-    - webpage
+description: A collection of findings and insights for building better user interfaces.
 pagination: 
     data: collections.categoriesAndAll
     size: 1
@@ -20,23 +18,24 @@ eleventyComputed:
     <div
         data-layout="with-sidebar "
         data-props="centered side:right space:m "
-        style="--side-width: calc(var(--space-3xl) * 6); --space: var(--space-xl);">
+        style="--side-width: calc(var(--space-3xl) * 6); --space: var(--space-xl); flex-wrap: wrap-reverse; font-size: var(--step-1)">
         <div data-layout="stack" data-props="y:center">
             <h1 data-heading="1">{{ meta.site_name }}</h1>
             <p>{{ description or meta.site_description }}</p>
             <div>
-                <a data-button="primary" href="/stories">Browse all stories</a>
+                <a data-button="primary" href="/stories">Browse all findings</a>
             </div>
         </div>
-        <small data-layout="center box" data-props="noBorder x:end intrinsic" style="--measure: var(--side-width)">
+        {# <small data-layout="center box" data-props="noBorder x:end intrinsic" style="--measure: var(--side-width)">
             {% include "svg/hero.svg" %}
             <i data-font="sans-serif">
                 Illustration from <a rel="noopener nofollow noreferrer"  target="_blank" href="https://absurd.design">absurd.design</a>
             </i>
-        </small>
+        </small> #}
     </div>
 </section>
 <section id="stories" data-layout="stack" data-props="space:xs">
+    <h2 data-heading="3">Browse by categories</h2>
     <nav class="categories-navigation">
         <ul role="list" data-layout="reel" data-props="noPad noBorder overflowing:noBar">
             {%- for category in collections.categoriesAndAll %}
@@ -47,9 +46,9 @@ eleventyComputed:
         </ul>
     </nav>
     {# <div data-layout="cluster" data-props="x:between"> #}
-    <h2 data-heading="4">
+    <h3 data-heading="5">
         {{ "Newest" if currentCategory == 'All' else currentCategory }}
-    </h2>
+    </h3>
     {# <a data-button href="/{{ 'stories' if currentCategory == 'All' else "categories/"+currentCategory | slugify}}">View </a> #}
     {# </div> #}
     <ul class="story-cards" data-layout="grid" data-props="noPad" role="list">
@@ -64,9 +63,6 @@ eleventyComputed:
             data-button="link"
             href="/{{view_all_url}}">
              View all
-            <span data-font="emoji" aria-hidden="true">
-                ▶
-            </span>
         </a>
     </span>
 </section>
