--- a/src/css/components/_buttons.css
+++ b/src/css/components/_buttons.css
@@ -1,6 +1,6 @@
 [data-button] {
   --minimum-height: 36px;
-  --border-radius: 0;
+  /* --border-radius: 0; */
   font-family: var(--font-sans-serif);
   --y-padding: var(--space-2xs);
   --x-padding: var(--space-s);
@@ -94,8 +94,9 @@
   cursor: pointer;
   display: inline-flex;
   gap: var(--space, 0);
-  justify-content: var(--horizontal-alignment, flex-start);
-  align-items: var(--vertical-alignment, center);
+
+  justify-content: var(--vertical-alignment, flex-start);
+  align-items: var(--horizontal-alignment, center);
   border-style: solid;
   border-width: var(--border-thin, 1px);
   border-color: var(--color-dark);
