--- a/src/pages/contribution/contribute-page.njk
+++ b/src/pages/contribution/contribute-page.njk
@@ -17,7 +17,7 @@ eleventyNavigation:
         <h2 data-heading="5">Know something interesting about frontend development ?</h2>
         <p>
             If you would like to provide feedback or contribute content to Frontend Stories, you can submit a form on a specific
-            story page or follow this link to add a new one. We welcome all of your comments, suggestions and criticisms!
+            finding page or follow this link to add a new one. We welcome all of your comments, suggestions and criticisms!
         </p>
     </div>
     <div>
