--- a/src/_includes/partials/site-head.njk
+++ b/src/_includes/partials/site-head.njk
@@ -1,5 +1,5 @@
 <head>
-    {% set meta_title = meta.site_name if page.url === "/" else title or " " + meta.site_name + " - "  %}
+    {% set meta_title = meta.site_name if page.url === "/" else title + " | " + meta.site_name  %}
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,9 +22,9 @@
     <meta property="og:title" content="{{meta_title}}">
     <meta property="og:description" content="{{description or meta.site_description}}">
     <!-- Open graph - Twitter -->
-    <meta name="twitter:image" content="{{meta.site_thumbnail or thumbnail }}">
+    <meta name="twitter:image" content="{{thumbnail or meta.site_thumbnail }}">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:creator" content="{{meta.twitter_name}}">
+    <meta name="twitter:creator" content="{{meta.author.twitter_name}}">
     <meta name="twitter:site" content="{{meta.twitter_name}}">
     <meta name="twitter:text:title" content="{{meta_title}}">
     <link rel="manifest" href="/manifest.json" />
