--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -5,12 +5,9 @@
             <span class="visually-hidden">Home</span>
         </a>
         <div data-layout="cluster" data-props="space:s">
-            <a data-font="sans-serif" data-link="data-link" href="/stories">
+            <a data-font="sans-serif" data-link="data-link" href="/findings">
                 Findings
             </a>
-            {# <a data-font="sans-serif" data-link="data-link" href="/about">
-                About
-            </a> #}
         </div>
     </div>
 </header>
