--- a/src/_includes/partials/story-card-entry.njk
+++ b/src/_includes/partials/story-card-entry.njk
@@ -1,13 +1,9 @@
-<li itemscope itemtype="http://schema.org/Article" class="story-card">
+<li itemscope itemtype="http://schema.org/Article" class="story-card" data-props="noMeasure">
     {% set color = entry.category.color %}
     {% set type = entry.type.name %}
-    {# <span>{{ entry.category.name }}</span> #}
-    <span class="story-card__cover"  data-color="{{ color }}" aria-hidden="true">
+    <span class="story-card__cover" data-color="{{ color }}" aria-hidden="true">
         <span data-font="emoji" aria-hidden="true">{{ entry.icon if entry.icon else '📄' }}</span>
     </span>
     <a itemprop="url" data-link="noHover" class="story-card__title" href="/{{ entry.slug }}">{{ entry.name }}</a>
-    {# {% if type == "Insight" %}
-        <span data-layout="center" data-heading="6" data-props="intrinsic" class="story-card__ribbon">Insight</span>
-    {% endif %} #}
-    <meta itemprop="headline" content="{{entry.name}}"/>
+    <meta itemprop="headline" content="{{ entry.name }}"/>
 </li>
