--- a/src/_includes/partials/site-head.njk
+++ b/src/_includes/partials/site-head.njk
@@ -1,5 +1,5 @@
 <head>
-    {% set meta_title = meta.site_name if page.url === "/" else title + " | " + meta.site_name  %}
+    {% set meta_title = meta.site_name if page.url === "/" else title   %}
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
