fix(SEO): ♻️ improve category page ttles and desc

--- a/src/_includes/layouts/category-layout.njk
+++ b/src/_includes/layouts/category-layout.njk
@@ -2,6 +2,6 @@
 {% block content %}
     {% include "partials/site-breadcrumbs.njk" %}
     <article data-layout="stack" data-props="space:l">
-        {{ content | safe }}
+        {% block article %}{% endblock %}
     </article>
 {% endblock %}
