--- a/src/_includes/partials/site-head.njk
+++ b/src/_includes/partials/site-head.njk
@@ -15,7 +15,7 @@
     <link rel="canonical" href="{{meta.site_url}}{{page.url}}">
     <meta property="og:image" content="{{ thumbnail or meta.site_thumbnail }}">
     <meta property="og:image:width" content="1200">
-    <meta property="og:image:width" content="628">
+    <meta property="og:image:height" content="628">
     <meta property="og:site_name" content="{{meta.site_name}}">
     <meta property="og:type" content="{{og_type or "website"}}">
     <meta property="og:url" content="{{meta.site_url}}{{page.url}}">
