chore: add site name to home title

--- a/src/pages/home-page.njk
+++ b/src/pages/home-page.njk
@@ -1,6 +1,6 @@
 ---
 layout: layouts/home-layout.njk
-title: "Home"
+title: "Home | Frontend Stories"
 hero_description: A collection of findings and insights for building better user interfaces.
 pagination: 
     data: collections.categoriesAndAll
