--- a/src/pages/categories/category-page.njk
+++ b/src/pages/categories/category-page.njk
@@ -8,7 +8,7 @@ pagination:
 permalink: "/categories/{{ category | slugify }}/index.html"
 eleventyComputed:
   title: "Findings about {{ category }} | Frontend Stories"
-  description: "Discover findings about {{category}} on Frontend Stories. {{meta.description}}"
+  description: "Discover findings about {{category}} on Frontend Stories. {{meta.site_description}}"
   eleventyNavigation:
     key: "{{category}}"
     title: "{{category}}"
