--- a/src/_includes/partials/reference-item.njk
+++ b/src/_includes/partials/reference-item.njk
@@ -1,6 +1,6 @@
 <li class="reference-item" data-props="noMeasure" >
     <a
-        data-link rel="noopener" target="{{ '_blank' if reference.url }}" href="{{ (reference.url if reference.url else '#') }}">
+        data-link rel="noopener nofollow noreferrer" target="{{ '_blank' if reference.url }}" href="{{ (reference.url if reference.url else '#') }}">
         <span data-font="serif">
             <b>{{ reference.cite if reference.cite }}</b>.
             <span>
