fix: permalink format

--- a/src/pages/contribution/contribute-page.njk
+++ b/src/pages/contribution/contribute-page.njk
@@ -3,7 +3,7 @@ title: Contribute
 tags: 
     - webpage
 layout: layouts/nested-page-layout.njk
-permalink: /contribute.html
+permalink: /contribute
 eleventyComputed:
     description: "Contribute to Frontend Stories. {{meta.site_description}}"
     eleventyNavigation:
