--- a/src/_includes/partials/site-head.njk
+++ b/src/_includes/partials/site-head.njk
@@ -11,19 +11,19 @@
     <meta name="title" content="{{meta_title}}">
     <meta name="generator" content="{{ eleventy.generator }}">
     <link rel="alternate" type="application/rss+xml" href="{{ meta.site_url }}/feed.xml" />
-    <!-- Open graph - Facebook 1200 x 628 -->
+    <!-- Open graph - Facebook 1200 x 630 -->
     <link rel="canonical" href="{{meta.site_url}}{{page.url}}">
     <meta property="og:image" content="{{ thumbnail or meta.site_thumbnail }}">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="628">
+    <!--<meta property="og:image:width" content="1200">-->
+    <!--<meta property="og:image:height" content="630">-->
     <meta property="og:site_name" content="{{meta.site_name}}">
-    <meta property="og:type" content="{{og_type or "website"}}">
+    <meta property="og:type" content="{{og_type or 'website'}}">
     <meta property="og:url" content="{{meta.site_url}}{{page.url}}">
     <meta property="og:title" content="{{meta_title}}">
     <meta property="og:description" content="{{description or meta.site_description}}">
     <!-- Open graph - Twitter -->
-    <meta name="twitter:image" content="{{thumbnail or meta.site_thumbnail }}">
     <meta name="twitter:card" content="summary_large_image">
+    <!--<meta name="twitter:image" content="{{thumbnail or meta.site_thumbnail }}">-->
     <meta name="twitter:creator" content="{{meta.author.twitter_name}}">
     <meta name="twitter:site" content="{{meta.twitter_name}}">
     <meta name="twitter:text:title" content="{{meta_title}}">
