--- a/src/_includes/layouts/base-layout.njk
+++ b/src/_includes/layouts/base-layout.njk
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     {% include "partials/site-head.njk" %}
-    <body data-layout="cover" data-props="noPad space:xl">
+    <body data-layout="cover" data-props="noPad space:xl" style="--min-height: 100vh;">
         {% include "partials/site-header.njk" %}
         <main id="main-content" data-layout="stack" data-props="centered x:stretch space:l">
             {% block content %}
