--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -8,6 +8,9 @@
             <a data-font="sans-serif" data-link="data-link" href="/findings">
                 Findings
             </a>
+            <a data-font="sans-serif" data-link="data-link" href="/about">
+                About
+            </a>
         </div>
     </div>
 </header>
