--- a/src/pages/categories/category-page.njk
+++ b/src/pages/categories/category-page.njk
@@ -21,7 +21,7 @@ eleventyComputed:
   </h1>
   <p>
     Here are some findings related to the subject of {{ category }}.
-    <ul class="story-cards" data-layout="grid" data-props="noPad" role="list">
+    <ul class="story-cards" data-layout="grid" data-props="noPad space:s" role="list">
       {% set entries = collections.stories | filterByCategory(category) %}
       {%- for entry in entries %}
         {% include "partials/story-card-entry.njk" %}
