--- a/src/pages/home-page.njk
+++ b/src/pages/home-page.njk
@@ -38,7 +38,7 @@ eleventyComputed:
         {{ "Newest" if currentCategory == 'All' else currentCategory }}
     </h3>
 
-    <ul class="story-cards" data-layout="grid" data-props="noPad" role="list">
+    <ul class="story-cards" data-layout="grid" data-props="noPad space:s" role="list">
         {% set entries = collections.stories | filterByCategory(currentCategory) | limitTo(4) %}
         {%- for entry in entries %}
             {% include "partials/story-card-entry.njk" %}
