--- a/src/pages/stories/stories-page.njk
+++ b/src/pages/stories/stories-page.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/nested-page-layout.njk
 title: All findings 
-description: Findings grouped by category.
+page_description: Findings grouped by category.
 permalink: /findings/index.html
 eleventyComputed:
     description: "Explore findings from Frontend Stories. {{meta.site_description}}"
@@ -14,21 +14,21 @@ eleventyComputed:
     {{ title }}
 </h1>
 <p>
-    {{ description }}
+    {{ page_description }}
 </p>
 <ul role="list" data-accordion data-props="noMeasure space:l">
     {%- for category in collections.categories %}
         {% set entries = collections.stories | filterByCategory(category) %}
         <details data-sticky open>
             <summary data-font="sans-serif">
-                <span >
+                <span>
                     {{ category }}
                 </span>
                 <span>
                     ({{ entries.length }})
                 </span>
             </summary>
-            <ul class="story-cards" data-props=" space:m" role="list" data-layout="grid">
+            <ul class="story-cards" data-props="space:s" role="list" data-layout="grid">
                 {% for entry in collections.stories | filterByCategory(category) %}
                     {% include "partials/story-card-entry.njk" %}
                 {% endfor %}
