feat: 🎨 update content

--- a/src/_includes/partials/site-footer.njk
+++ b/src/_includes/partials/site-footer.njk
@@ -1,9 +1,8 @@
 <footer class="site-footer" data-layout="switcher" data-props="invert">
     <div class="padded-container" data-layout="switcher" data-props="y:start">
-        <div data-layout="stack" data-props="x:start space:2xs">
+        <div data-layout="stack" data-props="x:start">
             <h2 data-heading="6">{{meta.site_name}}</h2>
-            <p>Built with Eleventy and Notion by 
-                <a href="https://twitter.com/nelioyann">{{meta.author.twitter_name}}</a>
+            <p data-font="sans-serif">Built using Eleventy and Notion, hosted on Netlify.
             </p>
         </div>
         <nav data-layout="stack" data-props="x:start">
