style: 💄 remove noto emoji font
- add Atkinson Hyperlegible
- make icons gray

--- a/src/_includes/partials/reference-item.njk
+++ b/src/_includes/partials/reference-item.njk
@@ -1,7 +1,7 @@
 <li class="reference-item" data-props="noMeasure" >
     <a
         data-link rel="noopener nofollow noreferrer" target="{{ '_blank' if reference.url }}" href="{{ (reference.url if reference.url else '#') }}">
-        <span data-font="serif">
+        <span>
             <b>{{ reference.cite if reference.cite }}</b>.
             <span>
                 {{ reference.name }}
