--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -5,10 +5,10 @@
             <span class="visually-hidden">Home</span>
         </a>
         <div data-layout="cluster" data-props="space:s">
-            <a data-font="sans-serif" data-link="data-link" href="/findings">
+            <a data-link="data-link" href="/findings">
                 Findings
             </a>
-            <a data-font="sans-serif" data-link="data-link" href="/about">
+            <a data-link="data-link" href="/about">
                 About
             </a>
         </div>
