--- a/src/css/_globals.css
+++ b/src/css/_globals.css
@@ -7,7 +7,7 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  font-family: var(--font-serif);
+  font-family: var(--font-sans-serif);
   font-size: var(--step-0);
   background-color: var(--color-light);
 }
@@ -17,9 +17,6 @@ h3, h4, h5, h6 {
   line-height: 1.2;
   --measure: 40ch;
   max-width: var(--measure);
-  font-weight: normal;
-  font-family: var(--font-sans-serif);
-  /* text-transform: capitalize; */
 }
 h1,
 [data-heading~="1"] {
@@ -90,6 +87,12 @@ main,
 .padded-container {
   padding-left: var(--responsive-padding);
   padding-right: var(--responsive-padding);
+}
+.measured-container{
+  max-width: calc(var(--measure, 80ch) * 1.5);
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 :where(button, a):where(:not(:active)):focus-visible {
